--- a/src/style/cardCountry.css
+++ b/src/style/cardCountry.css
@@ -7,6 +7,7 @@
   flex-wrap: wrap;
   padding: 2rem;
   background-color:var(--background-color);
+  height: 100vh;
 }
 
 @media (max-width: 800px) {
