--- a/src/style/cardCountry.css
+++ b/src/style/cardCountry.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   padding: 2rem;
-  background-color:var(--background-color);
+  background:var(--background-color);
   height: 100vh;
 }
 
