--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
     flex-direction: column;
 }
 
+/* main{
+    background:var(--background-color);
+    min-height: 100vh;
+} */
+
 body {
     overflow-y: scroll;
+    background:var(--background-color);
   }
