--- a/src/style/cardCountry.css
+++ b/src/style/cardCountry.css
@@ -7,7 +7,8 @@
   flex-wrap: wrap;
   padding: 2rem;
   background:var(--background-color);
-  height: 100vh;
+  min-height: 100vh;
+  
 }
 
 @media (max-width: 800px) {
